  [+] online/away operators list (on "awaiting visitors" page) by Andrew Armstrong
  [+] several instances of mibew in one DB ($mysqlprefix variable)
  [+] ability to override notification email for group
  [!] various compatibility fixes: button image, captcha, check webimroot variable (installation)
  [!] fix speed of history search, fix redirection to groups

  1.6.3
  -----
  [+] password restore functionality for agent
  [+] new Blue logo; new buttons: mgreen, mblue
  [!] fixed: button code conflicts with spam filters and mod_security
  [!] workarounds if some functions are disabled in php 
  [!] compatibility with PHP 5.3.0
  [+] new domain: mibew.org
 
  1.6.2
  -----
  [+] bi-licensed: EPL / GPL
  [+] operator is away status, show status on redirect/survey/operators pages
  [+] Captcha - Leave Message
  [+] groups page: last active column
  [+] pre-chat survey, redirect page: show group status - online/offline/away
  [!] do not show empty groups in redirect/survey
  [!] compatibility with the latest mod_security rules
  [+] performance options in settings: update intervals, operator online time threshold
  [+] information messages: visitor navigated to ...
  [!] html code in templates, better appearance in Safari

  1.6.1
  -----
  [!] 404 installation problem
  [+] new permission: "Ability to modify profile"
  [+] new project name: Mibew Messenger
  [!] fixed localization of dates for all languages, nice formatting: Today/Yesterday
  [!] fixed online/offline image for groups
  [+] ability to delete operators, confirmation dialog when deleting group/operator/blocked address
  [+] Information about last activity for operators: Online, Today at 22, 01 Jan.., or Never
  [+] new theme: simplicity (by Sheldmandu)
  [!] chat templates are fixed according to html standards

  1.6.0
  -----
  [+] completely new layout of all administrator pages, XHTML 1.0
  [+] New awaiting users and chat log pages